docs/v4.6.x/_sources/reference/wwctl_node_add.rst.txt
.. _wwctl_node_add:

wwctl node add
--------------

Add new node to Warewulf

Synopsis
~~~~~~~~


This command will add a new node named NODENAME to Warewulf.

::

  wwctl node add [OPTIONS] NODENAME

Options
~~~~~~~

::

      --asset string                 Set the node's Asset tag (key)
  -c, --cluster string               Set cluster group
      --comment string               Set arbitrary string comment
  -e, --discoverable WWbool[=true]   Make discoverable in given network (true/false)
      --diskname string              set diskdevice name
      --diskwipe                     whether or not the partition tables shall be wiped
      --fsformat string              format of the file system
      --fsname string                set the file system name which must match a partition name
      --fspath string                the mount point of the file system
      --fswipe                       wipe file system at boot
  -G, --gateway ip                   Set the node's network device gateway
  -h, --help                         help for add
  -H, --hwaddr string                Set the device's HW address for given network
      --image string                 Set image name
  -i, --init string                  Define the init process to boot the image
  -I, --ipaddr ip                    IPv4 address in given network
      --ipaddr6 ip                   IPv6 address
      --ipmiaddr ip                  Set the IPMI IP address
      --ipmiescapechar string        Set the IPMI escape character (defaults: '~')
      --ipmigateway ip               Set the IPMI gateway
      --ipmiinterface string         Set the node's IPMI interface (defaults: 'lan')
      --ipminetmask ip               Set the IPMI netmask
      --ipmipass string              Set the IPMI password
      --ipmiport string              Set the IPMI port
      --ipmitagadd stringToString    add ipmi tags (default [])
      --ipmitemplate string          template used for ipmi command
      --ipmiuser string              Set the IPMI username
      --ipmiwrite WWbool[=true]      Enable the write of impi configuration (true/false)
      --ipxe string                  Set the iPXE template name
  -A, --kernelargs strings           Set kernel arguments
      --kernelversion string         Set kernel version
      --mtu string                   Set the mtu
  -N, --netdev string                Set the device for given network
  -M, --netmask ip                   Set the networks netmask
      --netname string               network which is modified (default "default")
      --nettagadd stringToString     add network tags (default [])
      --onboot WWbool[=true]         Enable/disable network device (true/false)
      --partcreate                   create partition if not exist
      --partname string              set the partition name so it can be used by a file system
      --partnumber string            set the partition number, if not set next free slot is used
      --partsize string              set the size of the partition, if not set maximal possible size is used
  -p, --primarynet string            Set the primary network interface
  -P, --profile strings              Set the node's profile members (comma separated)
      --root string                  Define the rootfs
  -R, --runtime-overlays strings     Set the runtime overlay
  -O, --system-overlays strings      Set the system overlay
      --tagadd stringToString        add tags (default [])
  -T, --type string                  Set device type of given network

Options inherited from parent commands
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

::

  -d, --debug                 Run with debugging messages enabled.
  -v, --verbose               Run with increased verbosity.
      --warewulfconf string   Set the warewulf configuration file

SEE ALSO
~~~~~~~~

* :ref:`wwctl node <wwctl_node>` 	 - Node management

*Auto generated by spf13/cobra on 3-Mar-2025*
