docs/v4.7.x/_sources/reference/wwctl_node_add.rst.txt
.. _wwctl_node_add:

wwctl node add
--------------

Add new node to Warewulf

Synopsis
~~~~~~~~


This command will add a new node named NODENAME to Warewulf.

::

  wwctl node add [OPTIONS] NODENAME

Options
~~~~~~~

::

      --asset string                 the node's Asset tag (key)
  -c, --cluster string               cluster group
      --comment string               arbitrary string comment
  -e, --discoverable WWbool[=true]   discoverable in given network (true/false)
      --diskname string              set diskdevice name
      --diskwipe                     whether or not the partition tables shall be wiped
      --fsformat string              format of the file system
      --fsname string                set the file system name which must match a partition name
      --fspath string                the mount point of the file system
      --fswipe                       wipe file system at boot
  -G, --gateway ip                   the node's IPv4 network device gateway
      --gateway6 ip                  the node's IPv6 network device gateway
  -h, --help                         help for add
  -H, --hwaddr string                the device's HW address for given network
      --image string                 image name
  -i, --init string                  the init process to boot the image
  -I, --ipaddr ip                    IPv4 address in given network
      --ipaddr6 ip                   IPv6 address in given network
      --ipmiaddr ip                  the IPMI IP address
      --ipmiescapechar string        the IPMI escape character (defaults: '~')
      --ipmigateway ip               the IPMI gateway
      --ipmiinterface string         the node's IPMI interface (defaults: 'lan')
      --ipminetmask ip               the IPMI netmask
      --ipmipass string              the IPMI password
      --ipmiport string              the IPMI port
      --ipmitagadd stringToString    add ipmi tags (default [])
      --ipmitemplate string          template used for ipmi command
      --ipmiuser string              the IPMI username
      --ipmiwrite WWbool[=true]      writing of IPMI configuration (true/false)
      --ipxe string                  the iPXE template name
  -A, --kernelargs strings           kernel arguments
      --kernelversion string         kernel version
      --mtu string                   the MTU
  -N, --netdev string                the device for given network
  -M, --netmask ip                   the network's netmask
      --netname string               network which is modified (default "default")
      --nettagadd stringToString     add network tags (default [])
      --onboot WWbool[=true]         network device (true/false)
      --partcreate                   create the partition if it does not exist
      --partname string              set the partition name so it can be used by a file system
      --partnumber string            the partition number (if not set, next free slot is used)
      --partsize string              the partition size (if not set, maximum possible size is used)
      --parttype string              the partition type GUID
      --partwipe                     if true, Ignition will clobber an existing partition if it does not match the config
      --prefixlen6 string            the network's IPv6 prefix length
  -p, --primarynet string            the primary network interface
  -P, --profile strings              the node's profile members (comma separated)
      --root string                  the rootfs
  -R, --runtime-overlays strings     the runtime overlay
  -O, --system-overlays strings      the system overlay
      --tagadd stringToString        add tags (default [])
  -T, --type string                  device type of given network

Options inherited from parent commands
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

::

  -d, --debug                 Run with debugging messages enabled.
  -v, --verbose               Run with increased verbosity.
      --warewulfconf string   Set the warewulf configuration file

SEE ALSO
~~~~~~~~

* :ref:`wwctl node <wwctl_node>` 	 - Node management

